--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ footer {
         </nav>
         <div class="contact-info">
             <a href="tel:+2250787652368" class="contact-link">📞 +225 07 87 65 23 68</a>
-            <a href="commerciallpa3gmail.com" class="contact-link">✉️ commerciallpa3gmail.com</a>
+            <a href="commerciallpa3gmail.com" class="https://formspree.io/f/mdkwozgg">✉️ commerciallpa3gmail.com</a>
         </div>
     </header>
 
