--- a/services.html
+++ b/services.html
@@ -302,7 +302,7 @@ nav a:hover {
                 </a>
 
                 <a href="analyse-eau.html" class="service-card">
-                    <img src="eau.webp" alt="Services Analyse de l'eau">
+                    <img src="télécharger.webp" alt="Services Analyse de l'eau">
                     <h3>Analyse de l'eau</h3>
                     <p>Tests de potabilité (eaux de boisson), surveillance des rejets industriels, qualité des eaux souterraines et de surface.</p>
                 </a>
@@ -317,12 +317,6 @@ nav a:hover {
                     <img src="lab.webp" alt="Services Laboratoire Général">
                     <h3>Services Laboratoire Général</h3>
                     <p>Tests personnalisés, développement de méthodes analytiques spécifiques et assistance technique en laboratoire.</p>
-                </a>
-                
-                <a href="contact.html" class="service-card" style="border-color: #F22EBE; background-color: #fcecfc;">
-                    <img src="devis.webp" alt="Demande de devis">
-                    <h3 style="color: #F22EBE;">Besoin d'un Devis ?</h3>
-                    <p>Contactez-nous directement pour discuter de vos besoins spécifiques et obtenir une proposition personnalisée.</p>
                 </a>
                 
             </div>
