--- a/agro-alimentaire.html
+++ b/agro-alimentaire.html
@@ -251,7 +251,7 @@ footer {
             <section id="agro-alimentaire">
                 <h2>Sécurité et Qualité : Notre Engagement pour l'Agro-alimentaire</h2>
                 <p style="text-align: center; font-size: 1.2rem; line-height: 1.8; color: #333;">
-                    L'industrie agro-alimentaire fait face à des exigences **strictes** en matière de sécurité et de qualité. Chez **LPA**, nous sommes votre partenaire de confiance pour garantir la **conformité** de vos produits aux normes nationales et internationales, de la matière première au produit fini, assurant ainsi la **confiance** des consommateurs.
+                    L'industrie agro-alimentaire fait face à des exigences strictes en matière de sécurité et de qualité. Chez LPA, nous sommes votre partenaire de confiance pour garantir la conformité de vos produits aux normes nationales et internationales, de la matière première au produit fini, assurant ainsi la confiance des consommateurs.
                 </p>
                 
                 <hr style="margin: 40px auto; border-color: #eee;">
@@ -286,7 +286,7 @@ footer {
                         <h4>Recherche de Contaminants</h4>
                         <p>Détection des substances indésirables qui menacent la santé publique :</p>
                         <ul>
-                            <li>Analyse des **Métaux Lourds** (Plomb, Cadmium, Arsenic)</li>
+                            <li>Analyse des Métaux Lourds (Plomb, Cadmium, Arsenic)</li>
                             <li>Recherche de résidus de pesticides et d'antibiotiques</li>
                             <li>Contrôle des additifs et des conservateurs</li>
                             <li>Détection de Mycotoxines (moisissures toxiques)</li>
@@ -300,7 +300,7 @@ footer {
                             <li>Prélèvements sur les surfaces et l'équipement</li>
                             <li>Analyse de l'air ambiant dans les zones critiques</li>
                             <li>Validation des procédures de nettoyage et désinfection</li>
-                            <li>Conseil sur les normes **HACCP** et ISO 22000</li>
+                            <li>Conseil sur les normes HACCP et ISO 22000</li>
                         </ul>
                     </div>
                 </div>
@@ -312,7 +312,10 @@ footer {
     </main>
 
     <footer>
-        <p>Copyright @2025 LPA. Tous droits réservés.</p>
+         <div class="footer-bottom">
+            <p class="developer-credit">Copyright &copy; 2025 LPA. Tous droits réservés.</p>
+            <p class="developer-credit">Site développé par Jonathan N'GUETTIA</p>
+        </div>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Retour en haut">↑</button>
     <script>
