--- a/analyse-eau.html
+++ b/analyse-eau.html
@@ -258,7 +258,7 @@ footer {
             <section id="analyse-eau">
                 <h2>Eau : Un Enjeu de Qualité, Une Responsabilité Partagée</h2>
                 <p style="text-align: center; font-size: 1.2rem; line-height: 1.8; color: #333; margin-bottom: 40px;">
-                    La qualité de l'eau est essentielle pour la santé publique et l'industrie. **LPA** est votre partenaire expert pour garantir la **pureté et la conformité** de cette ressource vitale aux normes les plus rigoureuses. Nous couvrons tous les aspects, de l'eau potable aux rejets industriels.
+                    La qualité de l'eau est essentielle pour la santé publique et l'industrie. LPA est votre partenaire expert pour garantir la pureté et la conformité de cette ressource vitale aux normes les plus rigoureuses. Nous couvrons tous les aspects, de l'eau potable aux rejets industriels.
                 </p>
                 
                 <hr style="margin: 40px auto; border-color: #eee;">
@@ -271,10 +271,10 @@ footer {
                         <h4>Qualité Microbiologique (Santé)</h4>
                         <p>Évaluation des risques sanitaires pour la consommation humaine et les processus sensibles :</p>
                         <ul>
-                            <li>Recherche de **Coliformes Totaux** et **Escherichia coli**</li>
+                            <li>Recherche de Coliformes Totaux et Escherichia coli</li>
                             <li>Dénombrement de la Flore Totale (Germes Aérobies)</li>
                             <li>Détection des indicateurs de contamination fécale</li>
-                            <li>Tests de conformité pour les **eaux potables**</li>
+                            <li>Tests de conformité pour les eaux potables</li>
                         </ul>
                     </div>
 
@@ -282,8 +282,8 @@ footer {
                         <h4>Paramètres Physico-Chimiques</h4>
                         <p>Contrôle de la composition et des propriétés physiques pour la protection des infrastructures et des organismes :</p>
                         <ul>
-                            <li>Mesure du **pH**, de la Turbidité et de la Conductivité</li>
-                            <li>Recherche et Quantification des **Métaux Lourds** (Fer, Cuivre, Manganèse, Zinc)</li>
+                            <li>Mesure du pH, de la Turbidité et de la Conductivité</li>
+                            <li>Recherche et Quantification des Métaux Lourds (Fer, Cuivre, Manganèse, Zinc)</li>
                             <li>Détermination de la Dureté (Titre Hydrotimétrique)</li>
                             <li>Analyse des Nitrates, Phosphates et autres sels dissous</li>
                         </ul>
@@ -293,10 +293,10 @@ footer {
                         <h4>Eaux Industrielles et Environnementales</h4>
                         <p>Garantir que les eaux de rejet ou d'usage industriel respectent les réglementations :</p>
                         <ul>
-                            <li>Analyse des **Eaux de Rejet** avant déversement</li>
-                            <li>Contrôle de la Qualité des **Eaux de Processus** industriels</li>
+                            <li>Analyse des Eaux de Rejet avant déversement</li>
+                            <li>Contrôle de la Qualité des Eaux de Processus industriels</li>
                             <li>Évaluation des Eaux Souterraines et de Forage</li>
-                            <li>Conformité aux directives de l'**OMS 2017**</li>
+                            <li>Conformité aux directives de l'OMS 2017</li>
                         </ul>
                     </div>
                     
@@ -313,7 +313,10 @@ footer {
     </main>
 
     <footer>
-        <p>Copyright @2025 LPA. Tous droits réservés.</p>
+        <div class="footer-bottom">
+            <p class="developer-credit">Copyright &copy; 2025 LPA. Tous droits réservés.</p>
+            <p class="developer-credit">Site développé par Jonathan N'GUETTIA</p>
+        </div>
     </footer>
     <button onclick="topFunction()" id="myBtn" title="Retour en haut">↑</button>
     <script>
