--- a/prelevement.html
+++ b/prelevement.html
@@ -190,11 +190,116 @@ p {
 /* FOOTER ET BOUTON RETOUR EN HAUT */
 /* ======================================================= */
 footer {
-    background-color: #0378A6; /* Remplacé par le Bleu Teal pour le footer */
+    background-color: #0378A6;
     color: #fff;
+    padding: 50px 0 0 0; 
+    font-size: 1rem;
+}
+
+/* Grille principale du pied de page */
+.footer-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 30px; 
+    padding-bottom: 40px; 
+    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.footer-col h3 {
+    color: #4F9BCC;
+    font-size: 1.2rem;
+    margin-bottom: 20px; 
+    text-align: left;
+    font-weight: 600;
+}
+
+/* Colonne spéciale pour la marque/logo */
+.footer-brand p {
+    text-align: left;
+    font-size: 0.9rem;
+    line-height: 1.5;
+    color: #ccc;
+    margin-bottom: 15px;
+}
+
+/* Style commun pour les listes de liens/contact */
+.footer-col ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    line-height: 1.8; 
+}
+.footer-col ul li {
+    margin-bottom: 8px;
+    font-size: 0.95rem;
+    display: flex; /* Ajouté pour aligner l'icône */
+    align-items: center;
+}
+.footer-col ul li i {
+    color: #4F9BCC;
+    margin-right: 10px;
+    width: 15px; 
+}
+
+.footer-col a {
+    color: #ccc;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+.footer-col a:hover {
+    color: #fff; 
+}
+
+/* Style des icônes sociales */
+.social-links {
+    margin-top: 20px;
+}
+
+.social-links a {
+    display: inline-block;
+    color: #fff; 
+    font-size: 1.3rem;
+    margin-right: 15px;
+    transition: color 0.3s;
+}
+.social-links a:hover {
+    color: #4F9BCC;
+}
+
+
+/* Zone du bas de page (Copyright et crédit) */
+.footer-bottom {
+    padding: 15px 0; 
     text-align: center;
-    padding: 1.5rem 0;
-    margin-top: 30px;
+}
+.footer-bottom p {
+    font-size: 0.9rem;
+    text-align: center;
+    color: #ccc;
+    margin: 5px 0;
+}
+
+.developer-credit {
+    font-size: 0.8rem;
+    color: #aaa;
+}
+}
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none;
+    outline: none;
+    background-color: #0378A6; 
+    color: white; 
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+    font-size: 18px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: background-color 0.3s;
 }
 #myBtn {
     display: none; 
