--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ html {
     50% { transform: scale(1.05); opacity: 0.9; }
 }
 
+@keyframes scroll {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-50%); }
+}
+
 .reveal {
     opacity: 0;
     transform: translateY(40px);
@@ -531,63 +536,6 @@ header.scrolled {
 }
 
 /* ============================================ */
-/* PARTENAIRES */
-/* ============================================ */
-.partners-strip {
-    background: white;
-    padding: 3rem 0;
-    position: relative;
-    z-index: 20;
-    margin-top: -60px;
-    border-radius: 20px;
-    box-shadow: var(--shadow-lg);
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.partners-title {
-    text-align: center;
-    font-size: 0.9rem;
-    font-weight: 600;
-    color: #666;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 2rem;
-}
-
-.partners-slider {
-    overflow: hidden;
-    white-space: nowrap;
-    position: relative;
-}
-
-.partners-track {
-    display: inline-flex;
-    animation: scroll 30s linear infinite;
-    gap: 4rem;
-}
-
-.partner-logo {
-    height: 60px;
-    width: auto;
-    opacity: 0.6;
-    filter: grayscale(100%);
-    transition: var(--transition-base);
-}
-
-.partner-logo:hover {
-    opacity: 1;
-    filter: grayscale(0%);
-    transform: scale(1.1);
-}
-
-@keyframes scroll {
-    0% { transform: translateX(0); }
-    100% { transform: translateX(-50%); }
-}
-
-/* ============================================ */
 /* SERVICES */
 /* ============================================ */
 .services-section {
@@ -839,6 +787,51 @@ header.scrolled {
 .dot.active {
     background: white;
     transform: scale(1.3);
+}
+
+/* ============================================ */
+/* PARTENAIRES */
+/* ============================================ */
+.partners-strip {
+    background: white;
+    padding: 5rem 0;
+    position: relative;
+    z-index: 20;
+}
+
+.partners-title {
+    text-align: center;
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: #666;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    margin-bottom: 3rem;
+}
+
+.partners-slider {
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+}
+
+.partners-track {
+    display: inline-flex;
+    animation: scroll 30s linear infinite;
+    gap: 4rem;
+}
+
+.partner-logo {
+    height: 60px;
+    width: auto;
+    opacity: 0.8;
+    filter: none;
+    transition: var(--transition-base);
+}
+
+.partner-logo:hover {
+    opacity: 1;
+    transform: scale(1.1);
 }
 
 /* ============================================ */
@@ -1324,19 +1317,6 @@ footer {
         </div>
     </section>
 
-    <!-- BANDE PARTENAIRES -->
-    <section class="partners-strip">
-        <div class="partners-title">Ils nous font confiance</div>
-        <div class="partners-slider">
-            <div class="partners-track" id="partners-track">
-                <img src="agrifor.webp" alt="Agrifor" class="partner-logo">
-                <img src="sodeci.jpeg" alt="SODECI" class="partner-logo">
-                <img src="foraci.webp" alt="FORACI" class="partner-logo">
-                <img src="foraco.webp" alt="FORACO" class="partner-logo">
-            </div>
-        </div>
-    </section>
-
     <!-- SERVICES SECTION -->
     <section class="services-section reveal" id="services">
         <div class="section-header">
@@ -1446,6 +1426,18 @@ footer {
                 <span class="dot active" data-index="0"></span>
                 <span class="dot" data-index="1"></span>
                 <span class="dot" data-index="2"></span>
+            </div>
+        </div>
+    </section>
+
+    <!-- BANDE PARTENAIRES -->
+    <section class="partners-strip">
+        <div class="partners-title">Ils nous font confiance</div>
+        <div class="partners-slider">
+            <div class="partners-track" id="partners-track">
+                    <img src="sodeci.jpeg" alt="SODECI" class="partner-logo">
+                <img src="foraci.webp" alt="FORACI" class="partner-logo">
+                <img src="foraco.webp" alt="FORACO" class="partner-logo">
             </div>
         </div>
     </section>
