--- a/contact.html
+++ b/contact.html
@@ -1054,8 +1054,7 @@
 
                 <!-- Map Section -->
                 <div class="map-container">
-                    <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.434825890856!2d-4.0354753!3d5.3166667!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNcKwMTknMDAuMCJOIDTCsDAyJzAxLjciVw!5e0!3m2!1sfr!2sci!4v1234567890123!5m2!1sfr!2sci" 
+                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3971.8407344605175!2d-3.9863238261283938!3d5.441140794538264!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfc193577cf3be4b%3A0xc326e096f18cee96!2sPharmacie%20Biabou%20Mosquee!5e0!3m2!1sfr!2sci!4v1763094185716!5m2!1sfr!2sci" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
                         allowfullscreen="" 
                         loading="lazy" 
                         referrerpolicy="no-referrer-when-downgrade"
